--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   opacity: 1;
 }
 .text-heading {
-  padding: 15% 2% 2% 0.5%;
+  padding: 15% 2% 2% 4%;
 
   max-width: 400px;
 }
@@ -168,7 +168,7 @@ body {
   height: 414px;
   background-repeat: no-repeat;
   /* background-size: cover; */
-  margin-top: 5rem;
+  margin-top: 0rem;
   position: relative;
   text-align: center;
 
@@ -391,7 +391,7 @@ body {
     margin: 0px 0px;
   }
   .pre-vision-container .left-side-container .vision-left-side-padder {
-    padding-left: 0rem;
+    padding-left: 2rem;
   }
 
   .pre-vision-container .middle-container img {
@@ -456,7 +456,10 @@ body {
     margin: 0px 0px;
   }
   .pre-vision-container .left-side-container .vision-left-side-padder {
-    padding-left: 0rem;
+    margin-left: 3rem;
+  }
+  .footer-container {
+    margin-top: 2rem;
   }
 
   .pre-vision-container .middle-container img {
